# Space-Travel

./: Cargo.toml  Readme.md
src/: main.rs  shaders.rs
src/shader/: planet.wgsl
src/shaders/: skybox.wgsl  spaceship.wgsl  spaceship_fragment_shader.wgsl  spaceship_vertex_shader.wgsl
